# onedesk

./: Cargo.toml  README.md  log.yaml
convert/: Cargo.toml  build.rs
convert/src/: convert.rs  lib.rs
src/: client.rs  config.rs  input_utils.rs  main.rs  public.rs  server.rs  ui.rs  x264_utils.rs
src/client/: key_enent.rs  mouse_event.rs  remote_event_client.rs  video_client.rs
src/server/: key_event_server.rs  mouse_event_server.rs  remote_event_server.rs  video_server.rs
src/ui/: index.html  index.rs  remote.html  remote.rs
stream/: Cargo.toml
stream/protos/: message.proto  rendezvous.proto
stream/src/: bytes_codec.rs  codec.rs  id_conn.rs  lib.rs  quic.rs  relay.rs  remote_channel.rs  tcp.rs  utils.rs
stream/src/protos/: message.rs  rendezvous.rs
