[package]
name = "onedesk"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#x264-sys = "0.2.0"
stream = { path = "stream" }
log = "0.4.14"
log4rs = "1.0.0"
scrap = "0.5"
convert = { path = "convert" }
sciter-rs = "0.5.57"
openh264-sys = { version = "1.0.3" }
enigo = "0.0.14"
lazy_static = "1.4.0"
winapi = { version = "0.3.9", features = ["std", "impl-default", "windef", "winuser"] }

crossbeam = "0.8.1"
#配置文件
serde_derive = "1.0"
serde = "1.0"
serde_yaml = "0.8"
confy = "0.4.0"
directories-next = "2.0"

num_cpus = "1.13.0"
